@@ -1,39 +1,0 @@
-#!/bin/sh
-# Copyright 2012  Lars Wirzenius
-#
-# This program is free software: you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation, either version 3 of the License, or
-# (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with this program.  If not, see <http://www.gnu.org/licenses/>.
-
-# Do not include roots from previous generations in a new generation,
-# when the user stops specifying them.
-
-set -eu
-
-cd "$DATADIR"
-tar -xf "$SRCDIR/test-data/repo-format-5-encrypted-gzipped.tar.gz"
-"$SRCDIR/tests/obnam" convert5to6 \
-    -r repo --encrypt-with=1B321347 --compress-with=gzip
-"$SRCDIR/tests/obnam" restore \
-    -r repo --encrypt-with=1B321347 --compress-with=gzip --to=restored
-(cd "restored/home/liw/obnam/convert-5to6/t" &&
- summain --exclude=Username --exclude=Uid --exclude=Group --exclude=Gid data) \
-    > restored.summain
-
-# Not all filesystems support nanosecond timestamps, but that doesn't
-# matter for us. So we remove the sub-second timestamps from both
-# summain files.
-"$SRCDIR/sed-in-place" '/^Mtime:/s/\.[0-9]* /.IGNORED /' \
-    data.summain restored.summain
-
-diff -u data.summain restored.summain
-
