@@ -27,6 +27,5 @@
 ./.pc/debian-changes-0.22-2/obnamlib/plugins/backup_plugin.py
 ./.pc/debian-changes-0.22-2/obnamlib/plugins/fsck_plugin.py
 ./.pc/debian-changes-0.22-2/obnamlib/plugins/restore_plugin.py
-obnamlib/plugins/convert5to6_plugin.py
 obnamlib/repo_interface.py
 obnamlib/plugins/fuse_plugin.py
